# RoboCupDetector

./: .gitattributes  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README  build.sh  demo.avi  deps.sh  env.sh
cvblob/debian/: README.Debian  README.source  changelog  control  copyright  cvblob.cron.d.ex  cvblob.default.ex  cvblob.doc-base.EX  docs  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/: README.Debian  README.source  changelog  control  init.d.ex  manpage.sgml.ex  postinst  postrm  rules
dependencies/: libraspberrypi-bin_1.20160523-1_armhf.deb  libraspberrypi-dev_1.20160523-1_armhf.deb  libraspberrypi0_1.20160523-1_armhf.deb
doc/: doxygen_sqlite3.db
doc/docbook/: RC__BlobDetectorFactory_8cpp.xml  RC__BlobDetectorFactory_8hpp.xml  RC__BlobDetector_8cpp.xml  RC__BlobDetector_8hpp.xml  RC__Camera_8cpp.xml  RC__Camera_8cpp__dep__incl.md5  RC__Camera_8cpp__incl.md5  RC__Camera_8hpp.xml  RC__CircularBuffer_8cpp.xml  RC__CircularBuffer_8cpp__dep__incl.md5  RC__CircularBuffer_8cpp__incl.md5  RC__CircularBuffer_8hpp.xml  RC__CircularBuffer_8hpp__dep__incl.md5  RC__CircularBuffer_8hpp__incl.md5  RC__Daemon_8cpp.xml  RC__Daemon_8cpp__dep__incl.md5  RC__Daemon_8cpp__incl.md5  RC__Daemon_8hpp.xml  RC__Daemon_8hpp__dep__incl.md5  RC__DetectorFactory_8cpp.xml  RC__DetectorFactory_8cpp__dep__incl.md5  RC__DetectorFactory_8cpp__incl.md5  RC__DetectorFactory_8hpp.xml  RC__DetectorFactory_8hpp__incl.md5  RC__Detector_8cpp.xml  RC__Detector_8cpp__dep__incl.md5  RC__Detector_8cpp__incl.md5  RC__Detector_8hpp.xml  RC__Detector_8hpp__dep__incl.md5  RC__Main_8cpp.xml  RC__Main_8cpp__dep__incl.md5  RC__Main_8cpp__incl.md5  RC__Semaphore_8cpp.xml  RC__Semaphore_8hpp.xml  RC__Threads_8cpp.xml  RC__Threads_8cpp__dep__incl.md5  RC__Threads_8cpp__incl.md5  RC__Threads_8hpp.xml  RC__Threads_8hpp__incl.md5  RC__WebServer_8cpp.xml  (+46 more)
doc/html/: RC__BlobDetectorFactory_8hpp.html  RC__BlobDetectorFactory_8hpp_source.html  RC__BlobDetector_8hpp.html  RC__BlobDetector_8hpp_source.html  RC__Camera_8hpp.html  RC__Camera_8hpp__dep__incl.map  RC__Camera_8hpp__dep__incl.md5  RC__Camera_8hpp__incl.map  RC__Camera_8hpp__incl.md5  RC__Camera_8hpp_source.html  RC__CircularBuffer_8hpp.html  RC__CircularBuffer_8hpp__dep__incl.map  RC__CircularBuffer_8hpp__incl.map  RC__CircularBuffer_8hpp_source.html  RC__Daemon_8hpp.html  RC__Daemon_8hpp__dep__incl.map  RC__Daemon_8hpp__incl.map  RC__Daemon_8hpp__incl.md5  RC__Daemon_8hpp_source.html  RC__DetectorFactory_8hpp.html  RC__DetectorFactory_8hpp__dep__incl.map  RC__DetectorFactory_8hpp__dep__incl.md5  RC__DetectorFactory_8hpp__incl.map  RC__DetectorFactory_8hpp_source.html  RC__Detector_8hpp.html  RC__Detector_8hpp__dep__incl.map  RC__Detector_8hpp__incl.map  RC__Detector_8hpp__incl.md5  RC__Detector_8hpp_source.html  RC__Main_8cpp.html  RC__Main_8cpp__incl.map  RC__Semaphore_8hpp.html  RC__Semaphore_8hpp_source.html  RC__Threads_8hpp.html  RC__Threads_8hpp__dep__incl.map  RC__Threads_8hpp__dep__incl.md5  RC__Threads_8hpp__incl.map  RC__Threads_8hpp_source.html  RC__WebServer_8hpp.html  RC__WebServer_8hpp__incl.map  (+104 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  functions_0.js  namespaces_0.js  search.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js
doc/latex/: RC__BlobDetectorFactory_8hpp.tex  RC__BlobDetector_8hpp.tex  RC__Camera_8hpp.tex  RC__Camera_8hpp__dep__incl.md5  RC__Camera_8hpp__incl.md5  RC__CircularBuffer_8hpp.tex  RC__CircularBuffer_8hpp__dep__incl.md5  RC__CircularBuffer_8hpp__incl.md5  RC__Daemon_8hpp.tex  RC__Daemon_8hpp__dep__incl.md5  RC__Daemon_8hpp__incl.md5  RC__DetectorFactory_8hpp.tex  RC__DetectorFactory_8hpp__dep__incl.md5  RC__DetectorFactory_8hpp__incl.md5  RC__Detector_8hpp.tex  RC__Detector_8hpp__dep__incl.md5  RC__Detector_8hpp__incl.md5  RC__Main_8cpp.tex  RC__Main_8cpp__incl.md5  RC__Semaphore_8hpp.tex  RC__Threads_8hpp.tex  RC__Threads_8hpp__dep__incl.md5  RC__Threads_8hpp__incl.md5  RC__WebServer_8hpp.tex  RC__WebServer_8hpp__incl.md5  RC__Window_8hpp.tex  RC__Window_8hpp__incl.md5  annotated.tex  classrc_1_1BlobDetector.eps  classrc_1_1BlobDetector.tex  classrc_1_1BlobDetectorFactory.eps  classrc_1_1BlobDetectorFactory.tex  classrc_1_1Camera.eps  classrc_1_1Camera.tex  classrc_1_1Camera__coll__graph.md5  classrc_1_1Camera__inherit__graph.md5  classrc_1_1CircularBuffer.tex  classrc_1_1CircularBuffer__coll__graph.md5  classrc_1_1Daemon.tex  classrc_1_1Detector.eps  (+24 more)
raspicam/: CMakeLists.txt
raspicam-0.0.5/debian/: changelog  control  copyright  manpage.xml.ex  preinst.ex  raspicam.doc-base.EX  watch.ex
raspicam/debian/: control  manpage.1.ex  menu.ex  postinst.ex  postrm.ex  prerm.ex  raspicam.cron.d.ex  raspicam.default.ex  rules
src/: CMakeLists.txt  RC_BlobDetector.cpp  RC_BlobDetector.hpp  RC_BlobDetectorFactory.cpp  RC_BlobDetectorFactory.hpp  RC_BlobObject.cpp  RC_BlobObject.hpp  RC_Camera.cpp  RC_Camera.hpp  RC_CircularBuffer.cpp  RC_CircularBuffer.hpp  RC_Daemon.cpp  RC_Daemon.hpp  RC_Detector.cpp  RC_Detector.hpp  RC_DetectorFactory.cpp  RC_DetectorFactory.hpp  RC_Main.cpp  RC_Semaphore.cpp  RC_Semaphore.hpp  RC_Threads.cpp  RC_Threads.hpp  RC_WebServer.cpp  RC_WebServer.hpp  RC_Window.cpp  RC_Window.hpp  raspicam_still.cpp  raspicam_test.cpp  rc_main.cpp
