#####################################
cmake_minimum_required (VERSION 2.8) 
project (bsz7_robocup)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_RULE_MESSAGES OFF)

set(ENABLE_DEBUG false CACHE BOOL "enable debug code")
set(USE_XWINDOW false CACHE BOOL "use X11 for realtime analysis")
set(ENABLE_VIDEO false CACHE BOOL "enable divx video output")
set(ENABLE_WEBSERVER true CACHE BOOL "enable a minimal webserver (lifestreaming)")
set(ENABLE_BLUR false CACHE BOOL "enable image blurring before processing")

set(PKG_AUTHOR "Toni Uhlig")
set(PKG_EMAIL "matzeton@googlemail.com")
set(PKG_VERSION "0.1a")

set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--no-as-needed")
set(CMAKE_INSTALL_PREFIX "/usr")
set(raspicam_DIR "/usr/lib/cmake")

find_package(raspicam REQUIRED)
find_package(PkgConfig)
find_package(OpenCV)

pkg_check_modules(PC_LIBMICROHTTPD libmicrohttpd)
IF (ENABLE_WEBSERVER AND NOT PC_LIBMICROHTTPD_FOUND)
	MESSAGE(FATAL_ERROR "WebServer enabled but libmicrohttpd NOT FOUND")
ELSEIF(ENABLE_WEBSERVER AND PC_LIBMICROHTTPD_FOUND)
	MESSAGE(STATUS "WebServer enabled")
	add_definitions("-DENABLE_HTTPD=1")
	set(HTTPD_SOURCES RC_WebServer.cpp)
ENDIF()

IF (ENABLE_DEBUG)
        add_definitions("-O0 -g2 -pg -DDEBUG=1 -D_DEBUG=1")
ELSE()
        add_definitions("-O3 -fomit-frame-pointer -ffast-math -fno-math-errno")
        set(CMAKE_EXE_LINKER_FLAGS "-fprofile-generate -flto ${CMAKE_EXE_LINKER_FLAGS}")
ENDIF()

add_definitions("-DPKG_AUTHOR=\"${PKG_AUTHOR}\"")
add_definitions("-DPKG_EMAIL=\"${PKG_EMAIL}\"")
add_definitions("-DPKG_VERSION=\"${PKG_VERSION}\"")

IF (OpenCV_FOUND AND raspicam_CV_FOUND)
IF (USE_XWINDOW)
	add_definitions(-DUSE_XWINDOW=1)
	set(XWINDOW_SOURCES RC_Window.cpp)
ENDIF()
IF (ENABLE_VIDEO)
	add_definitions(-DENABLE_VIDEO=1)
ENDIF()

set(raspicam_CV_LIBS ${raspicam_CV_LIBS} raspicam)
add_executable (robocup RC_Main.cpp RC_Daemon.cpp RC_Threads.cpp RC_CircularBuffer.cpp RC_Camera.cpp RC_Detector.cpp RC_DetectorFactory.cpp ${XWINDOW_SOURCES} ${HTTPD_SOURCES})
target_link_libraries (robocup ${raspicam_CV_LIBS} raspicam pthread ${PC_LIBMICROHTTPD_LIBRARIES})

MESSAGE(STATUS "ENABLE_DEBUG: ${ENABLE_DEBUG}")
MESSAGE(STATUS "USE_XWINDOW: ${USE_XWINDOW}")
MESSAGE(STATUS "ENABLE_VIDEO: ${ENABLE_VIDEO}")
MESSAGE(STATUS "ENABLE_WEBSERVER: ${ENABLE_WEBSERVER}")
MESSAGE(STATUS "ENABLE_BLUR: ${ENABLE_BLUR}")
MESSAGE(STATUS "found OpenCV, version ${OpenCV_VERSION}")
MESSAGE(STATUS "found raspicam_cv")
ELSE()
MESSAGE(FATAL_ERROR "OpenCV or raspicam_cv NOT FOUND")
ENDIF()

MESSAGE(STATUS "CMAKE_VERBOSE_MAKEFILE: ${CMAKE_VERBOSE_MAKEFILE}")
MESSAGE(STATUS "CMAKE_RULE_MESSAGES: ${CMAKE_RULE_MESSAGES}")
MESSAGE(STATUS "RASPICAM_CV_LIBS: ${raspicam_CV_LIBS}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
MESSAGE(STATUS "CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
MESSAGE(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")

INSTALL_PROGRAMS(/bin FILES robocup)
#####################################
